--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HEINZ!!!</title>
+  <title>Конструктор резюме</title>
+  <meta name="description" content="Не знаешь, как составить резюме? Сыграй в игру и получи шаблон для CV.">
+  <link rel="icon" type="image/png" href="/favicon.png" />
 </head>
 
 <body>
